# ultimate-ableton-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
remote_script/UltimateAbletonMCP/: __init__.py
remote_script/UltimateAbletonMCP/handlers/: __init__.py  browser.py  clip.py  device.py  scene.py  session.py  track.py  transport.py
scripts/: install-remote-script.sh
skills/: ableton-midi.md  ableton-mixing.md  ableton-production.md  ableton-sound-design.md
src/ultimate_ableton_mcp/: __init__.py  connection.py  server.py
src/ultimate_ableton_mcp/tools/: __init__.py  browser.py  clip.py  device.py  scene.py  session.py  track.py  transport.py
tests/: conftest.py  mocks.py  test_connection.py  test_handler_clip.py  test_handler_device.py  test_handler_scene_browser.py  test_handler_session.py  test_handler_track.py  test_remote_script.py  test_tools_dispatch.py
