[project]
name = "ultimate-ableton-mcp"
version = "0.1.0"
description = "MCP server for Ableton Live — 7 operation-dispatched tools covering full LOM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ultimate-ableton-mcp = "ultimate_ableton_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
